aligning still not fixed

--- a/pedroeldiablo/w01d04/javascript-calculator/css/style.css
+++ b/pedroeldiablo/w01d04/javascript-calculator/css/style.css
@@ -14,19 +14,20 @@ body {
   padding: 30px;
   border-radius: 10px;
   font-size: 16px;
-  font-family: cursive;
+  font-family: sans-serif;
 }
 
 .field {
   height: 30px;
-  width: 70%;
+  width: 220px;
   margin-left: 10%;
+  margin-top: 3px;
   border-color: pink;
   border-width: 4px;
   display: inline-block;
   font-size: 16px;
   font-family: cursive;
-  /*position:absolute;*/
+  position:relative;
 }
 
 #operator{
@@ -36,7 +37,8 @@ body {
   border-width: 4px;
   margin-left: 10%;
   display: inline-block;
-  width: 70%;
+  width: 220px;
+  height: 30px;
   font-family: Helvetica;
   font-size: 24px;
 }
